<resources>
    <string name="app_name">Pomodoro\nApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">TODAY</string>
    <string name="this_week">THIS WEEK</string>
    <string name="this_year">THIS YEAR</string>
    <string name="delete_fab">DeleteFAB</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="work">WORK</string>
    <string name="initial_value">00:00:00</string>
    <string name="go_to_statistics">Go To Statistics</string>
    <string name="break_string">BREAK</string>
    <string name="start_string">START</string>
    <string name="work_string">WORK</string>
    <string name="stop_string">STOP</string>
    <string name="resume_string">RESUME</string>
    <string name="statistics">Statistics</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home_string">Home</string>
    <string name="this_month">THIS MONTH</string>
    <string name="write_task_name">Write task name</string>
    <string name="how_to_use">If you do not enter a task name, you cannot start the timer. The Pomodoro technique is to work for 20 minutes, take a break for 5 minutes. When you complete this cycle 4 times, a pomodor will have occurred and this value will be entered on the statistics screen.</string>
</resources>