<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.StatisticsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OverView"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id ="@+id/today_btn"
                android:text = "@string/today"
                android:layout_marginEnd="20dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id ="@+id/this_week_btn"
                android:text = "@string/this_week"
                android:layout_marginEnd="20dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:id ="@+id/this_year_btn"
                android:text = "@string/this_year"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete_fab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="DeleteFAB" />
        </LinearLayout>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>